# obsidian-livesync-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: code-reviewer.md
.claude/skills/gen-test/: SKILL.md
docs/superpowers/plans/: 2026-03-29-livesync-compatibility.md
src/obsidian_livesync_mcp/: oauth_callback.py  oauth_provider.py  oauth_store.py
src/obsidian_self_mcp/: cli.py  client.py  config.py  models.py  server.py  utils.py
tests/: test_client.py  test_oauth_callback.py  test_oauth_config.py  test_oauth_ephemeral.py  test_oauth_provider.py  test_oauth_store.py  test_utils.py
